
Version 1.0.207 Released Jan 10, 2012

    - Refactored schema package to make schema tracking not be SQL-specific
    - Added SocketAcceptor, ValidationContext, ExceptionLoggingFilter
    - Added ParseUtil.deserializeBooleanStrictly()

Version 1.0.189 Released Dec 16, 2011

    - Removed obsolete WebContextApplicationServlet
    - Added @VaadinConfigurable and re-targeted VaadinConfigurableAspect to
      apply to @VaadinConfigurable beans instead of @Configurable beans; this
      avoids a conflict when doing load-time weaving when spring-aspects.jar
      is also on the classpath. NOTE: backward-incompatible change.

Version 1.0.173 Released Oct 28, 2011

    - Added aspect for wiring @Configurable beans for SpringContextApplication
    - Fixed bugs in SpringContextApplication

Version 1.0.155 Released Oct 21, 2011

    - Added SpringContextApplication
    - Added OutputStreamWriter and InputStreamReader
    - Added XMLDocument{Input,Output}Stream
    - Added AbstractValidator and @Sorted validation constraint
    - Fix bug where JiBXUtil.writeObject() was closing the output stream
    - Refactored jibx sub-package to isolate Spring dependencies

Version 1.0.140 Released Oct 12, 2011

    - Added PropertyDef
    - Added VaadinApplicationScope
    - Added VaadinApplicationListener
    - Added CloseListener interface to ContextApplication

Version 1.0.134 Released Sep 18, 2011

    - Update for latest Vaadin version
    - Added ContextApplication Vaadin helper class
    - Add support for JiBX parsing of templated Spring EL expressions
    - Added "single-update" attribute to <dellroad-stuff:sql-update> tag
    - Fixed bug in <dellroad-stuff:sql-update> parser ignoring "depends-on"

Version 1.0.119 Released Aug 28, 2011

    - Changed TimedWait to use nanoTime() instead of currentTimeMillis()
    - Added ThreadParkingLot, ParseContext, DateEncoder, DoubleFormat, LinkedList

Version 1.0.100 Released May 10, 2011
