@@ -1,4 +1,8 @@
 
+Version Next
+
+    - Relax requirement for ListableBeanFactory in SpringSQLSchemaUpdater
+
 Version 1.0.207 Released Jan 10, 2012
 
     - Refactored schema package to make schema tracking not be SQL-specific
